chore: sonar warnings fix
Refs: #24
